--- a/main.html
+++ b/main.html
@@ -8,9 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Time</h1>
-	<h1>Space</h1>
-	<h1>Complexity</h1>
+	<h1>Time and Space Complexity</h1>
+	
 	<p>Time complexity, efficient</p>
 	<p><b>Space Complexity</b>, O(n)</p>
     <script type="text/javascript" src="./script.js">
